--- a/product-details.html
+++ b/product-details.html
@@ -33,7 +33,7 @@
 						<div class="contactinfo">
 							<ul class="nav nav-pills">
 								<li><a href=""><i class="fa fa-phone"></i> +9779865609055</a></li>
-								<li><a href=""><i class="fa fa-envelope"></i> abbhan053@gmail.com</a></li>
+								<li><a href=""><i class="fa fa-envelope"></i> techadda58@gmail.com</a></li>
 							</ul>
 						</div>
 					</div>
