--- a/index.html
+++ b/index.html
@@ -403,10 +403,8 @@
 							<h2>Policies</h2>
 							<ul class="nav nav-pills nav-stacked">
 								<li><a href="#">Terms of Use</a></li>
-								<li><a href="#">Privecy Policy</a></li>
+								<li><a href="#">Privacy Policy</a></li>
 								<li><a href="#">Refund Policy</a></li>
-								<li><a href="#">Billing System</a></li>
-								<li><a href="#">Ticket System</a></li>
 								<li><a href="#">Copyright</a></li>
 							</ul>
 						</div>
