--- a/login.html
+++ b/login.html
@@ -1,3 +1,10 @@
+<?php include "sqlconnect.php"; ?>
+<?php 
+session_start();
+if(isset($_SESSION["login"])) {
+    header("Location: index.php");
+} 
+?>
 <!DOCTYPE html>
 <html lang="en">
 
@@ -231,3 +238,4 @@
 </body>
 
 </html>
+<?php $conn->close(); ?>
