--- a/product-details.html
+++ b/product-details.html
@@ -66,7 +66,7 @@
 							<ul class="nav navbar-nav">
 								<li><a href=""><i class="fa fa-user"></i> Account</a></li>
 								<li><a href="cart.html"><i class="fa fa-shopping-cart"></i> Cart</a></li>
-								<li><a href="login.html"><i class="fa fa-lock"></i> Login/sign up</a></li>
+								<li><a href="login.html"><i class="fa fa-user"></i> Login/sign up</a></li>
 							</ul>
 						</div>
 					</div>
